Add reference to ProPolice stack-smashing protector.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -49,6 +49,12 @@ compiled without bounds checking.</p>
 <a href="ftp://ftp.newspapersystems.com/pub/binaries/boundschecking/example.html#Example">
 compilation and execution</a> of an example program.</p>
 
+<h2><a href="http://www.research.ibm.com/trl/projects/security/ssp/">ProPolice
+Stack-Smashing Protector</a></h2>
+
+<p>ProPolice automatically inserts stack-smashing protection code into an
+application at compile time to detect buffer overflow and corruption of
+pointers.</p>
 
 <hr />
 
