* htdocs/cvs.html: Document 3.4-e500 branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -287,6 +287,13 @@ particular releases or snapshots or the latest snapshot.  </p>
   at Apple.  Patches should be marked with the tag
   <code>[apple-ppc]</code> in the subject line.</dd>
 
+  <dt>gcc-3_4-e500-branch</dt>
+  <dd>This branch is for stabilization of the powerpc-*spe
+  architecture, and for adding support for the 8548 chip (e500 v2).  This
+  branch is maintained by Aldy Hernandez.  Patches should be marked with the
+  tag <code>[3.4-e500]</code> in the subject line.  ChangeLog entries should
+  go in ChangeLog.e500</dd>
+
 </dl>
 
 <h4>Language-specific</h4>
