Add missing period.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -292,7 +292,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   architecture, and for adding support for the 8548 chip (e500 v2).  This
   branch is maintained by Aldy Hernandez.  Patches should be marked with the
   tag <code>[3.4-e500]</code> in the subject line.  ChangeLog entries should
-  go in ChangeLog.e500</dd>
+  go in ChangeLog.e500.</dd>
 
 </dl>
 
