--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -105,6 +105,12 @@
 <h3>C++</h3>
 
   <ul>
+    <li>When compiling without optimizations (<code>-O0</code>), the C++
+        frontend is <em>much</em> faster than in any previous
+        versions of GCC. Independent testers have measured speed-ups up to
+        25% in real-world production code, compared to the 3.4 family (which
+        was already the fastest version to date). Upgrading from older
+        versions might show even bigger improvements.</li>
     <li>ELF visibility attributes can now be applied to a class type,
         so that it affects every member function of a class at once,
         without having to specify each individually:
