--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -144,6 +144,13 @@
         want to disable this by specifying
         <code>-fno-threadsafe-statics</code> for a small savings in code
         size.</li>
+    <li>G++ has an undocumented extension to virtual function
+	covariancy rules that allowed the overrider to return a type
+	that was implicitly convertable to the overridden function's
+	return type.   For instance a function returning <code>void
+	*</code> could be overridden by a function returning
+	<code>T *</code>.  This is now deprecated and will be removed in
+	a future release.</li>
   </ul>
 
 <h3>Java</h3>
