Revamp and compress the textual description.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,28 +10,23 @@
 
 <h1><small>Welcome to the GCC home page!</small></h1>
 
-<p>GCC is the GNU Compiler Collection, which currently contains
-front ends for C, C++, Objective-C, <a href="fortran/">Fortran</a>,
+<p>GCC, the GNU Compiler Collection, includes front ends for
+C, C++, Objective-C, <a href="fortran/">Fortran</a>,
 <a href="java/">Java</a>, and Ada, as well as libraries for these
 languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).
-<a href="frontends.html">Further frontends</a> are available.</p>
-
-<p>Major decisions about GCC are made by the <a href="steering.html">
-steering committee</a>, guided by the <a href="gccmission.html">
-mission statement</a>.</p>
-
-<p>We encourage everyone to <a href="contribute.html">contribute changes</a>
-and help testing GCC, and we provide access to our development sources with
-<a href="cvs.html">anonymous CVS</a> and <a href="snapshots.html">weekly
-snapshots</a>.</p>
 
 <p>We strive to provide regular, high quality
 <a href="releases.html">releases</a>, which we want to work well on a variety
-of native (including GNU/Linux) and cross targets.
-To that end, we use an extensive <a href="http://gcc.gnu.org/testing/">test
-suite and automated regression testers</a> as well
-as various <a href="benchmarks/">benchmark suites and automated testers</a>
-to maintain and improve quality.</p>
+of native and cross targets (including GNU/Linux), and encourage everyone 
+to <a href="contribute.html">contribute changes</a> and
+<a href="testing/">help testing</a> GCC.
+
+Our sources are readily and freely available
+via <a href="cvs.html">CVS</a> and <a href="snapshots.html">weekly
+snapshots</a>.</p>
+<p>Major decisions about GCC are made by the <a href="steering.html">
+steering committee</a>, guided by the <a href="gccmission.html">
+mission statement</a>.
 
 <dl>
 
