--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -26,7 +26,7 @@ snapshots</a>.</p>
 
 <p>Major decisions about GCC are made by the <a href="steering.html">
 steering committee</a>, guided by the <a href="gccmission.html">
-mission statement</a>.
+mission statement</a>.</p>
 
 <dl>
 
