* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Thu Oct 28 13:06:33 UTC 2004</p>
+Wed Nov  3 13:57:32 UTC 2004</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -15,18 +15,62 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.CieXyzConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.ClutProfileConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.ColorLookUpTable</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.ColorSpaceConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.GrayProfileConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.GrayScaleConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.LinearRGBConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.ProfileHeader</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.PyccConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.RgbProfileConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.SrgbConverter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.TagEntry</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.awt.color.ToneReproductionCurve</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkChoicePeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkChoicePeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkComponentPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkComponentPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkScrollPanePeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollPanePeer.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Choice</td> <td class="needsmerge"><a href="compare/java.awt.Choice.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.DefaultKeyboardFocusManager</td> <td class="needsmerge"><a href="compare/java.awt.DefaultKeyboardFocusManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
-<tr> <td class="libgcj-only">java.awt.image.ColorConvertOp</td> <td class="libgcj-only">GCJ-only</td> </tr>
-<tr> <td class="needsmerge">java.awt.image.ColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ColorModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.color.ICC_ColorSpace</td> <td class="needsmerge"><a href="compare/java.awt.color.ICC_ColorSpace.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.color.ICC_Profile</td> <td class="needsmerge"><a href="compare/java.awt.color.ICC_Profile.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.color.ICC_ProfileGray</td> <td class="needsmerge"><a href="compare/java.awt.color.ICC_ProfileGray.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.color.ICC_ProfileRGB</td> <td class="needsmerge"><a href="compare/java.awt.color.ICC_ProfileRGB.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.geom.GeneralPath</td> <td class="needsmerge"><a href="compare/java.awt.geom.GeneralPath.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.AffineTransformOp</td> <td class="needsmerge"><a href="compare/java.awt.image.AffineTransformOp.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.awt.image.BandCombineOp</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ColorConvertOp</td> <td class="needsmerge"><a href="compare/java.awt.image.ColorConvertOp.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ComponentSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ComponentSampleModel.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.awt.image.ConvolveOp</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">java.awt.image.LookupOp</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.Raster</td> <td class="needsmerge"><a href="compare/java.awt.image.Raster.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.RescaleOp</td> <td class="needsmerge"><a href="compare/java.awt.image.RescaleOp.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.SampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.SampleModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontMetrics.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkFontMetrics.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkFontPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGlyphVector.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGlyphVector.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics2D.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphicsEnvironment.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphicsEnvironment.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkPixbufDecoder.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkTextLayout.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkTextLayout.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCanvasPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkCanvasPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFileDialogPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkFileDialogPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkGenericPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkGenericPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkImagePainter.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkImagePainter.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuBarPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuBarPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuItemPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuItemPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkPopupMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkPopupMenuPeer.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
