--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Thu Oct 28 13:05:59 UTC 2004</p>
+Wed Nov  3 13:57:00 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -42,6 +42,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.UtilDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.beans.PropertyEditorSupport</td> <td class="needsmerge"><a href="compare/java.beans.PropertyEditorSupport.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
