Add description of ia64-fp-model-branch

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -294,6 +294,17 @@ particular releases or snapshots or the latest snapshot.  </p>
   tag <code>[3.4-e500]</code> in the subject line.  ChangeLog entries should
   go in ChangeLog.e500.</dd>
 
+  <dt>ia64-fp-model-branch</dt>
+  <dd>This branch is a short-lived development branch with the goal of
+  implementing the improvements and features discussed at the <a href=
+"http://www.dberlin.org/gccwiki/index.php/ia64%20floating%20point">ia64
+floating point</a> page on the <a
+  href="http://www.dberlin.org/gccwiki/">GCC wiki</a>.  It is
+  maintained by Zack Weinberg &lt;<a
+  href="mailto:zack@codesourcery.com">zack@codesourcery.com</a>&gt;.
+  Patches should be marked with the tag <code>[ia64-fp-model]</code>
+  in the subject line.</dd>
+
 </dl>
 
 <h4>Language-specific</h4>
