--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -271,6 +271,12 @@ particular releases or snapshots or the latest snapshot.  </p>
   be marked with the tag <code>[csl-sol210-branch]</code> in the
   subject line.</dd>
 
+  <dt>csl-sol210-3_4-branch</dt>
+  <dd>CodeSourcery branch for developing Solaris 2.10 AMD64 support
+  for GCC 3.4.  This branch is maintained by CodeSourcery personnel.
+  Patches should be marked with the tag
+  <code>[csl-sol210-branch]</code> in the subject line.</dd>
+
   <dt>hammer-3_3-branch</dt>
   <dd>The goal of this branch is to have a stable compiler based on GCC 3.3
   with improved performance for AMD's 64-bit Hammer CPUs. The branch is
