--- a/htdocs/gcc-3.4/index.html
+++ b/htdocs/gcc-3.4/index.html
@@ -8,6 +8,14 @@
 
 <h1>GCC 3.4 Release Series</h1>
 
+<p>November 4, 2004</p>
+
+<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+developers are pleased to announce the release of GCC 3.4.3.</p>
+
+<p>This release is a bug-fix release, containing fixes for regressions
+in GCC 3.4.2 relative to previous releases of GCC.</p>
+
 <p>September 6, 2004</p>
 
 <p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
@@ -42,6 +50,11 @@ variety of targets and test packages.</p>
 <h2>Release History</h2>
 
 <dl>
+<dt>GCC 3.4.3</dt>
+<dd><a name="3.4.3">November 4, 2004</a>
+    (<a href="changes.html#3.4.3">changes</a>)
+</dd>
+
 <dt>GCC 3.4.2</dt>
 <dd><a name="3.4.2">September 6, 2004</a>
     (<a href="changes.html#3.4.2">changes</a>)
