Add 3.4 branchpoint to list.

--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -316,6 +316,9 @@ milestones.</p>
 <tr><th>tag</th>
     <th>added on this date</th>
 </tr>
+<tr><td>gcc-3_4-branchpoint</td>
+    <td>2004-01-16</td>
+</tr>
 <tr><td>gcc-3_3-branchpoint</td>
     <td>2002-12-13</td>
 </tr>
