--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -322,7 +322,7 @@ stages of development, branch points, and releases:</p>
   GCC 4.0 Stage 3                          GCC 3.4.2 release (Sep 6 2004)
        |                                        \
        |                                         v
-       |                                   GCC 3.4.3 release (...)
+       |                                   GCC 3.4.3 release (Nov 4 2004)
        |
        +-- GCC 4.0 branch --------------+
        |                                 \
