--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,7 +36,7 @@ mission statement</a>.</p>
 -->
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.4/">GCC 3.4.2</a> (released 2004-09-06)
+  <a href="gcc-3.4/">GCC 3.4.3</a> (released 2004-11-04)
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2004-10/msg01005.html">2004-10-26</a>
@@ -82,6 +82,11 @@ mission statement</a>.</p>
 <h2><small>News/Announcements</small></h2>
 
 <dl>
+
+<dt><b>November 4, 2004</b></dt>
+<dd>
+<a href="gcc-3.4/">GCC 3.4.3</a> has been released.
+</dd>
 
 <dt><b>September 9, 2004</b></dt>
 <dd>
