Add 3.4.3 release notes. By Joe Buck <Joe.Buck@synopsys.COM>.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -11,6 +11,9 @@
 <body>
 <h1>GCC 3.4 Release Series<br />Changes, New Features, and Fixes</h1>
 
+<p>The latest release in the 3.4 release series is
+<a href="#3.4.3">GCC 3.4.3</a>.</p>
+
 <p><em>GCC 3.4 has <a href="#cplusplus">many improvements in the C++
 frontend</a>.  Before reporting a bug, please make sure it's really GCC,
 and not your code, that is broken.</em></p>
@@ -1581,6 +1584,120 @@ of problem reports (PRs)</a> from GCC's bug tracking system that are
 known to be fixed in the 3.4.2 release. This list might not be
 complete (that is, it is possible that some PRs that have been fixed
 are not listed here).</p>
+
+<h4>Bootstrap failures</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17369">17369</a> [ia64] Bootstrap failure with binutils-2.15.90.0.1.1</li>
+<li><a href="http://gcc.gnu.org/PR17850">17850</a> [arm-elf] bootstrap failure - libstdc++ uses strtold when undeclared</li>
+</ul>
+<h4>Internal compiler errors (ICEs) affecting multiple platforms</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR13948">13948</a> (java) GCJ segmentation fault while compiling GL4Java .class files</li>
+<li><a href="http://gcc.gnu.org/PR14492">14492</a> ICE in <code>loc_descriptor_from_tree</code>, in <code>dwarf2out.c</code></li>
+<li><a href="http://gcc.gnu.org/PR16301">16301</a> (c++) ICE when "strong" attribute is attached to a <code>using</code> directive</li>
+<li><a href="http://gcc.gnu.org/PR16566">16566</a> ICE with flexible arrays</li>
+<li><a href="http://gcc.gnu.org/PR17023">17023</a> ICE with nested functions in parameter declaration</li>
+<li><a href="http://gcc.gnu.org/PR17027">17027</a> ICE with noreturn function in loop at <code>-O2</code></li>
+<li><a href="http://gcc.gnu.org/PR17524">17524</a> ICE in <code>grokdeclarator</code>, in <code>cp/decl.c</code></li>
+<li><a href="http://gcc.gnu.org/PR17826">17826</a> (c++) ICE in <code>cp_tree_equal</code></li>
+</ul>
+<h4>C and optimization bugs</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15526">15526</a> <code>-ftrapv</code> aborts on <code>0 * (-1)</code></li>
+<li><a href="http://gcc.gnu.org/PR16999">16999</a> <code>#ident</code> stopped working</li>
+<li><a href="http://gcc.gnu.org/PR17503">17503</a> quadratic behaviour in invalid_mode_change_p</li>
+<li><a href="http://gcc.gnu.org/PR17581">17581</a> Long long arithmetic fails inside a switch/case statement when compiled with <code>-O2</code></li>
+<li><a href="http://gcc.gnu.org/PR18129">18129</a> <code>-fwritable-strings</code> doesn't work</li>
+</ul>
+<h4>C++ compiler and library bugs</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10975">10975</a> incorrect initial <code>ostringstream::tellp()</code></li>
+<li><a href="http://gcc.gnu.org/PR11722">11722</a> Unbuffered <code>filebuf::sgetn</code> is slow</li>
+<li><a href="http://gcc.gnu.org/PR14534">14534</a> Unrecognizing static function as a template parameter when its return value is also templated</li>
+<li><a href="http://gcc.gnu.org/PR15172">15172</a> Copy constructor optimization in aggregate initialization</li>
+<li><a href="http://gcc.gnu.org/PR15786">15786</a> Bad error message for frequently occuring error.</li>
+<li><a href="http://gcc.gnu.org/PR16162">16162</a> Rejects valid member-template-definition</li>
+<li><a href="http://gcc.gnu.org/PR16612">16612</a> empty basic_strings can't live in shared memory</li>
+<li><a href="http://gcc.gnu.org/PR16715">16715</a> <code>std::basic_iostream</code> is instantiated when used, even though instantiations are already contained in libstdc++</li>
+<li><a href="http://gcc.gnu.org/PR16848">16848</a> code in <code>/ext/demangle.h</code> appears broken</li>
+<li><a href="http://gcc.gnu.org/PR17132">17132</a> GCC fails to eliminate function template specialization when argument deduction fails</li>
+<li><a href="http://gcc.gnu.org/PR17259">17259</a> One more <code>_S_leaf</code> incorrectly qualified with <code>_RopeRep::</code> in <code>ropeimpl.h</code></li>
+<li><a href="http://gcc.gnu.org/PR17327">17327</a> use of `enumeral_type' in template type unification</li>
+<li><a href="http://gcc.gnu.org/PR17393">17393</a> "unused variable '._0'" warning with <code>-Wall</code></li>
+<li><a href="http://gcc.gnu.org/PR17501">17501</a> Confusion with member templates</li>
+<li><a href="http://gcc.gnu.org/PR17537">17537</a> g++ not passing <code>-lstdc</code>++ to linker when all command line arguments are libraries</li>
+<li><a href="http://gcc.gnu.org/PR17585">17585</a> usage of unqualified name of static member from within class not allowed</li>
+<li><a href="http://gcc.gnu.org/PR17821">17821</a> Poor diagnostic for using "." instead of "-&gt;"</li>
+<li><a href="http://gcc.gnu.org/PR17829">17829</a> wrong error: call of overloaded function is ambiguous</li>
+<li><a href="http://gcc.gnu.org/PR17851">17851</a> Misleading diagnostic for invalid function declarations with undeclared types</li>
+<li><a href="http://gcc.gnu.org/PR17976">17976</a> Destructor is called twice</li>
+<li><a href="http://gcc.gnu.org/PR18020">18020</a> rejects valid definition of <code>enum</code> value in template</li>
+<li><a href="http://gcc.gnu.org/PR18093">18093</a> bogus conflict in namespace aliasing</li>
+<li><a href="http://gcc.gnu.org/PR18140">18140</a> C++ parser bug when using &gt;&gt; in templates</li>
+</ul>
+<h4>Fortran</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17541">17541</a> data statements with double precision constants fail</li>
+</ul>
+<h4>x86-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17853">17853</a> <code>-O2</code> ICE for MMX testcase</li>
+</ul>
+<h4>Sparc-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17245">17245</a> ICE compiling gsl-1.5 <code>statistics/lag1.c</code></li>
+</ul>
+<h4>Darwin-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17167">17167</a> FATAL:Symbol <code>L_foo$stub</code> already defined.</li>
+</ul>
+<h4>AIX-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17277">17277</a> could not catch an exception when specified <code>-maix64</code></li>
+</ul>
+<h4>Solaris-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17505">17505</a> <code>&lt;cmath&gt;</code> calls <code>acosf()</code>, <code>ceilf()</code>, and other functions missing from system libraries</li>
+</ul>
+<h4>HP/UX specific:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17684">17684</a> /usr/ccs/bin/ld: Can't create <code>libgcc_s.sl</code></li>
+</ul>
+<h4>ARM-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17384">17384</a> ICE with mode attribute on structures</li>
+</ul>
+<h4>MIPS-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17770">17770</a> No NOP after LWL with <code>-mips1</code></li>
+</ul>
+<h4>Other embedded target specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR11476">11476</a> [arc-elf] gcc ICE on newlib's <code>vfprintf.c</code></li>
+<li><a href="http://gcc.gnu.org/PR14064">14064</a> [avr-elf] <code>-fdata-sections</code> triggers ICE</li>
+<li><a href="http://gcc.gnu.org/PR14678">14678</a> [m68hc11-elf] gcc ICE</li>
+<li><a href="http://gcc.gnu.org/PR15583">15583</a> [powerpc-rtems] powerpc-rtems lacks <code>__USE_INIT_FINI__</code></li>
+<li><a href="http://gcc.gnu.org/PR15790">15790</a> [i686-coff] Alignment error building gcc with i686-coff target</li>
+<li><a href="http://gcc.gnu.org/PR15886">15886</a> [SH] Miscompilation with <code>-O2</code> <code>-fPIC</code></li>
+<li><a href="http://gcc.gnu.org/PR16884">16884</a> [avr-elf] [fweb related] bug while initializing variables</li>
+</ul>
+<h4>Bugs relating to debugger support</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR13841">13841</a> missing debug info for <code>_Complex</code> function arguments</li>
+<li><a href="http://gcc.gnu.org/PR15860">15860</a> [big-endian targets] No <code>DW_AT_location</code> debug info is emitted for formal arguments to a function that uses "register" qualifiers</li>
+</ul>
+<h4>Testsuite issues (compiler not affected)</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR17465">17465</a> Testsuite in libffi overrides LD_LIBRARY_PATH</li>
+<li><a href="http://gcc.gnu.org/PR17469">17469</a> Testsuite in libstdc++ overrides LD_LIBRARY_PATH</li>
+<li><a href="http://gcc.gnu.org/PR18138">18138</a> [mips-sgi-irix6.5] <code>libgcc_s.so.1</code> not found by 64-bit testsuite</li>
+</ul>
+<h4>Documentation</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR15498">15498</a> typo in gcc manual: non-existing locale example en_UK, should be en_GB</li>
+<li><a href="http://gcc.gnu.org/PR15747">15747</a> [mips-sgi-irix5.3] /bin/sh hangs during bootstrap: document broken shell</li>
+<li><a href="http://gcc.gnu.org/PR16406">16406</a> USE_LD_AS_NEEDED undocumented</li>
+</ul>
 
 </body>
 </html>
