--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -202,6 +202,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-ncr-sysv4.3.03</td>
+<td>NCR MP-RAS 3.03, GNU binutils</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00735.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i586-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -273,6 +281,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.6.9<td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg01078.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Fedora Core 2, glibc 2.3.3, kernel 2.6.6</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg01201.html">3.4.1</a>
@@ -299,6 +315,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00952.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00966.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<tr>i686-pc-linux-gnu</td>
+<tr>Mandrake 10.0, glibc 2.3.3, kernel 2.6.8</td>
+<td>Bootstrap (C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00661.html">3.4.2</a>
 </td>
 </tr>
 
@@ -336,8 +360,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-mingw32</td>
 <td>Windows XP SP2 Pro, binutils 2.15, mingwrt 3.5, w32api 3.1, libiconv 1.9.1</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-11/msg00292.html">3.4.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00476.html">3.4.2</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-11/msg00386.html">3.4.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00359.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00306.html">3.4.2</a>
 </td>
@@ -436,6 +462,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin7.6.0</td>
+<td>Mac OS 10.3.6</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-11/msg00286.html">3.4.3</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.3.3.0</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -455,6 +489,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-ibm-aix5.2.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00724.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00549.html">3.4.1</a>
 </td>
 </tr>
