--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -897,6 +897,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Mac OS X 10.2.8</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00770.html">3.3.2</a>
+<br />Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg01043.html">3.3.4</a>
 <br />Bootstrap (C, C++, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01496.html">3.3.3</a>
 </td>
