--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -281,7 +281,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Debian 3.0, glibc 2.2.5, kernel 2.6.9<td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.6.9</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-10/msg01078.html">3.4.2</a>
 </td>
@@ -319,8 +319,8 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<tr>i686-pc-linux-gnu</td>
-<tr>Mandrake 10.0, glibc 2.3.3, kernel 2.6.8</td>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 10.0, glibc 2.3.3, kernel 2.6.8</td>
 <td>Bootstrap (C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00661.html">3.4.2</a>
 </td>
