Clarify generation of online documentation.

--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -69,13 +69,12 @@ branch tag should already be there).</li>
 present.</li>
 
 <li>Generate online documentation for the new release with
-<code>update_web_docs</code> and link to it from
-<code>onlinedocs/index.html</code> (but don't break URLs to
-documentation for previous releases even if you remove the links to
-it).  The appropriate command to run (as gccadmin) to generate the
-documentation would be <code>scripts/update_web_docs
+<code>update_web_docs</code>.  The appropriate command to run (as gccadmin)
+to generate the documentation would be <code>scripts/update_web_docs
 -rgcc_3_0_2_release -dgcc-3.0.2</code> (with the current version
-number inserted).</li>
+number inserted).  Link to it from <code>onlinedocs/index.html</code>
+(but don't break URLs to documentation for previous releases even if
+you remove the links to it).</li>
 
 <li>Update the main web page (<code>index.html</code>).</li>
 </ol>
